<resources>
    <string name="app_name">App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="phone">رقم الجوال </string>
    <string name="username">الاسم </string>
    <string name="password">كلمةالسر </string>
    <string name="forgetpass">نسيت كلمةالسر؟ </string>
    <string name="rememberme">تذكرنى </string>
    <string name="login">تسجيل الدخول </string>
    <string name="register">تسجيل عضوية جديدة </string>
    <string name="myads">اعلانتى </string>
    <string name="addadsnow">اضافة اعلان الان </string>
    <string name="msg">الرسائل </string>
    <string name="sandokbarid">صندوق البريد </string>
    <string name="rwabtthmak">روابط تهمك </string>
    <string name="mosadawtawasl">مساعدة و تواصل </string>
    <string name="talimat">رقم الجوال </string>
    <string name="elpalad">اختيار البلد </string>
    <string name="takymeltabyk">تقييم التطبيق </string>
    <!--<string name="selectcountry"><font fgcolor="-#72d1d3" size="15">\u0020  &#xf041; \u0020  </font><font fgcolor="grey" size="14">اختيار البلد</font></string>-->


    <string name="title_activity_account">حسابى</string>


    <string name="phoneIcon">\u0020 &#xf095;\u0020 </string>
    <string name="passwordicon">\u0020 &#xf023;\u0020 </string>
    <string name="usernameIcon">\u0020 &#xf007;\u0020 </string>

    <string name="title_activity_register">Register</string>


</resources>
