<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.anas.app.Hesaby">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
            android:layout_marginTop="100dp"
        android:id="@+id/logo_hesaby_id"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myads"
            android:padding="8dp"
            android:textSize="12sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addadsnow"
            android:padding="10dp"
            android:background="@color/backtext"
            android:id="@+id/hesaby_add_ads_id"
            android:textSize="14sp"
            android:gravity="right"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg"
        android:textSize="12sp"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/backtext"
        android:text="@string/sandokbarid"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/rwabtthmak"
        android:textSize="12sp"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:text="@string/mosadawtawasl"
    android:padding="10dp"
        android:background="@color/backtext"
    android:textSize="14sp"/>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/talimat"
    android:padding="10dp"
        android:layout_marginTop="2dp"
    android:textSize="14sp"
        android:background="@color/backtext"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_border"
        android:padding="10dp">

        <TextView
            android:id="@+id/selectCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elpalad"
            android:padding="3dp"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:background="@drawable/gradient_spinner"
            android:popupBackground="#ffff"
            />
    </LinearLayout>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:text="@string/takymeltabyk"
    android:padding="10dp"
        android:layout_marginTop="2dp"
        android:background="@color/backtext"
    android:textSize="14sp"/>


    </LinearLayout>

</ScrollView>



</LinearLayout>
