<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_account"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anas.app.Login"
    tools:showIn="@layout/activity_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:padding="14dp"
        android:orientation="horizontal"
        android:background="@drawable/black_border"
        android:gravity="center">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneIcon"
            android:text="@string/phoneIcon"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
             />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:id="@+id/Phone_id"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="14sp"
            android:background="@color/transparent"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:padding="14dp"
        android:orientation="horizontal"
        android:background="@drawable/black_border"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordIcon"
            android:text="@string/passwordicon"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="numberPassword"
            android:id="@+id/password_id"
            android:hint="@string/password"
            android:textSize="14sp"
            android:background="@color/transparent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp">


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberme"
            android:id="@+id/check_remember_id"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpass"
            android:id="@+id/forgetpassword_id"
           android:layout_marginLeft="10dp"            />

    </LinearLayout>

    <Button
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/bt_login"
        android:text="@string/login"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:id="@+id/tx_newaccount_id"/>



</LinearLayout>
