<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anas.app.Register"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:padding="14dp"
        android:orientation="horizontal"
        android:background="@drawable/black_border"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_username_icon"
            android:text="@string/usernameIcon"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:id="@+id/id_username"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="14sp"
            android:background="@color/transparent"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:padding="14dp"
        android:orientation="horizontal"
        android:background="@drawable/black_border"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_phoneIcon_register"
            android:text="@string/phoneIcon"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:id="@+id/id_phoneRegister"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="14sp"
            android:background="@color/transparent"
            />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:padding="14dp"
    android:orientation="horizontal"
    android:background="@drawable/black_border"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_passwordIcon_register"
        android:text="@string/passwordicon"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:id="@+id/id_password_register"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:background="@color/transparent"
        />
</LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/bt_register_id"/>

</LinearLayout>
